--- a/notebooks/linreg_statespace.ipynb
+++ b/notebooks/linreg_statespace.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Gentle Introduction to State Space Models in Python with `statsmodels`\n",
+    "\n",
+    "Basic workflow:\n",
+    "1. Specify the model using math and wrangle it into the State Space form\n",
+    "2. Translate the state space form into `statsmodels` base `MLEModel` class\n",
+    "\t1. Slot in required parameters and specify required matrices\t\n",
+    "\t2. Abstract away the messy estimation behind `.fit()`\n",
+    "3. Use the parameters to do something useful - predict, forecast, etc and inspect the results\n",
+    "\n",
+    "## Notation\n",
+    "\n",
+    "Notation among state space models is not entirely consistent, better to understand the meaning (or as code)\n",
+    "\n",
+    "The generic form of a state space model from [statsmodels implementation docs](https://www.statsmodels.org/stable/statespace.html):\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "y_t &= Z_t\\alpha_t + d_t + \\epsilon_t, \\quad \\epsilon_t \\sim N(0, H_t)\\\\\n",
+    "\\alpha_{t+1} &= T_t\\alpha_t + c_t + R_t\\eta_t, \\quad \\eta_t \\sim N(0, Q_t)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "| math | statsmodels parameter |\n",
+    "| --- | --- |\n",
+    "| $Z_t$ | `design` matrix|\n",
+    "| $d_t$ | `obs_intercept` |\n",
+    "| $H_t$ | `obs_cov` |\n",
+    "| $T_t$ | `transition` |\n",
+    "| $c_t$ | `state_intercept` |\n",
+    "| $R_t$ | `selection` matrix|\n",
+    "| $Q_t$ | `state_cov` |\n",
+    "\n",
+    "Let's create one from scratch using the `sm.tsa.statespace.MLEModel` base class. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,14 +57,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple example"
+    "## Simple Linear Regression as a State Space Model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model:\n",
+    "Let's start with a simple example - since Linear Regression can be considered a special case of the state space model, we can state a simple linear regression in state space form as follows:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -34,21 +75,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Data\n",
-    "salesPrice = [590, 575, 550, 520, 545, \n",
-    "              575, 550, 510, 595, 600]\n",
-    "sqFootage = [2057, 1713, 1791, 1472, 1481, \n",
-    "             1642, 1727, 1468, 1801, 1713]"
+    "For our data, we'll simply use data from 10 home sales in my area from the past year, where we'll seek to understand the relationship between `sqFootage` of a home and its `salesPrice`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +92,7 @@
        "Text(0, 0.5, \"Sale Price ($100K's)\")"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,7 +108,13 @@
     }
    ],
    "source": [
-    "# fix, ax = plt.subplots(1, figsize=(16,4))\n",
+    "# Data\n",
+    "salesPrice = [590, 575, 550, 520, 545, \n",
+    "              575, 550, 510, 595, 600]\n",
+    "sqFootage = [2057, 1713, 1791, 1472, 1481, \n",
+    "             1642, 1727, 1468, 1801, 1713]\n",
+    "\n",
+    "# As expected, larger the home the higher the sale price\n",
     "plt.scatter(sqFootage, salesPrice)\n",
     "plt.title(\"Example Data: Home prices (in $100K's) vs House Size\")\n",
     "plt.xlabel(\"Square Footage\")\n",
@@ -84,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look at the OLS estimate of the $\\beta$ coefficient:"
+    "Let's take a look at the OLS estimate of the $\\beta$ coefficient, which in this case is an estimate of the sale price per square foot of a home."
    ]
   },
   {
@@ -257,37 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_t = np.array(salesPrice)\n",
-    "x_t = np.array(sqFootage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 1, 10)"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_t.reshape(-1,  1).T[np.newaxis, :].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,8 +307,10 @@
     "\"\"\"\n",
     "class LinearRegression(sm.tsa.statespace.MLEModel):\n",
     "    def __init__(self, y_t, x_t):\n",
-    "        exog = x_t.reshape(-1, 1) # reshape it into a column vector (nobs, 1)\n",
-    "        # Model order\n",
+    "        # reshape x_t into a column vector (nobs, 1)\n",
+    "        exog = np.array(x_t).reshape(-1, 1) \n",
+    "\n",
+    "        # Model order - only 1 state\n",
     "        k_states = 1\n",
     "\n",
     "        # Initialize the statespace\n",
@@ -512,7 +525,8 @@
     "\"\"\"\n",
     "class DynamicLinearRegression(sm.tsa.statespace.MLEModel):\n",
     "    def __init__(self, y_t, x_t):\n",
-    "        exog = np.c_[x_t] # shaped (nobs, 1)\n",
+    "        # reshape x_t into a column vector (nobs, 1)\n",
+    "        exog = np.array(x_t).reshape(-1, 1) \n",
     "        # Model order\n",
     "        k_states = 1  # Still only one hidden state/beta coefficient\n",
     "\n",
