--- a/notebooks/linreg_statespace.ipynb
+++ b/notebooks/linreg_statespace.ipynb
@@ -32,11 +32,11 @@
     "| --- | --- |\n",
     "| $Z_t$ | `design` matrix|\n",
     "| $d_t$ | `obs_intercept` |\n",
-    "| $H_t$ | `obs_cov` |\n",
-    "| $T_t$ | `transition` |\n",
+    "| $H_t$ | `obs_cov` matrix|\n",
+    "| $T_t$ | `transition` matrix|\n",
     "| $c_t$ | `state_intercept` |\n",
     "| $R_t$ | `selection` matrix|\n",
-    "| $Q_t$ | `state_cov` |\n",
+    "| $Q_t$ | `state_cov` matrix|\n",
     "\n",
     "Let's create one from scratch using the `sm.tsa.statespace.MLEModel` base class. "
    ]
