todo: added the pymc-experimental state space model link

--- a/notebooks/linreg_statespace.ipynb
+++ b/notebooks/linreg_statespace.ipynb
@@ -893,7 +893,8 @@
     "Suggested next steps are to explore the `statsmodels` [documentation on Custom statespace models](https://www.statsmodels.org/dev/examples/notebooks/generated/statespace_custom_models.html) for more detailed and more complex examples.\n",
     "\n",
     "1. [Custom statespace models](https://www.statsmodels.org/dev/examples/notebooks/generated/statespace_custom_models.html)\n",
-    "2. [State space modeling: Local Linear Trends](https://www.statsmodels.org/dev/examples/notebooks/generated/statespace_local_linear_trend.html)"
+    "2. [State space modeling: Local Linear Trends](https://www.statsmodels.org/dev/examples/notebooks/generated/statespace_local_linear_trend.html)\n",
+    "3. [pymc-experimental: Making a Custom Statespace Model](https://github.com/pymc-devs/pymc-experimental/blob/main/notebooks/Making%20a%20Custom%20Statespace%20Model.ipynb)"
    ]
   },
   {
