--- a/notebooks/tfcausalimpact.ipynb
+++ b/notebooks/tfcausalimpact.ipynb
@@ -8,16 +8,16 @@
     "\n",
     "After looking at `causalpy`, let's see how `tfcausalimpact` compares. What I like about this is that it isn't that finnicky about the index type and this implementation uses a Bayesian Structural Time Series model which I appreciate.\n",
     "\n",
-    "A BSTS model takes on the form:\n",
+    "A BSTS model takes on a specific form of our happy State Space model:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\text{obs} \\quad y_t &= Z_t\\alpha_t + \\beta X_t + G_t\\epsilon_t, \\quad \\epsilon_t \\sim N(0, \\sigma_t^2)\\\\\n",
-    "\\text{state} \\quad \\alpha_{t+1} &= T_t \\alpha_t + R_t \\eta_t, \\quad \\eta_t \\sim N(0, Q_t)\n",
+    "\\text{observation} \\quad y_t & = Z_t\\alpha_t + \\beta X_t + G_t\\epsilon_t, \\quad &\\epsilon_t \\sim N(0, H_t)\\\\\n",
+    "\\text{state} \\quad \\alpha_{t+1} & = T_t \\alpha_t + R_t \\eta_t, \\quad &\\eta_t \\sim N(0, Q_t)\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "in which we see our familiar State Space Model form plus a $\\beta X_t$ term for the regressors."
+    "Note the $\\beta X_t$ term for the regressors."
    ]
   },
   {
@@ -799,9 +799,11 @@
    "source": [
     "## References\n",
     "\n",
+    "* [Inferring causal impact using Bayesian ttructural time-series models](https://research.google/pubs/pub41854/)\n",
     "* [Towards Data Science - Implementing Causal Impact on top of Tensorflow Probability](https://towardsdatascience.com/implementing-causal-impact-on-top-of-tensorflow-probability-c837ea18b126)\n",
     "* [Inferring the effect of an event using CausalImpact by Kay Broderson](https://www.youtube.com/watch?v=GTgZfCltMm8)\n",
-    "* [Getting Started notebook](https://github.com/WillianFuks/tfcausalimpact/blob/master/notebooks/getting_started.ipynb)"
+    "* [tfcausalimpact Getting Started notebook](https://github.com/WillianFuks/tfcausalimpact/blob/master/notebooks/getting_started.ipynb)\n",
+    "* [Unoffical Google Data Science Blog: Fitting Bayesian Structural Time Series](https://www.unofficialgoogledatascience.com/2017/07/fitting-bayesian-structural-time-series.html#:~:text=A%20structural%20time%20series%20model,t%CE%B1t%2B%CF%B5t.)"
    ]
   },
   {
