--- a/notebooks/tfcausalimpact.ipynb
+++ b/notebooks/tfcausalimpact.ipynb
@@ -799,7 +799,7 @@
    "source": [
     "## References\n",
     "\n",
-    "* [Inferring causal impact using Bayesian ttructural time-series models](https://research.google/pubs/pub41854/)\n",
+    "* [Inferring causal impact using Bayesian structural time-series models](https://research.google/pubs/pub41854/)\n",
     "* [Towards Data Science - Implementing Causal Impact on top of Tensorflow Probability](https://towardsdatascience.com/implementing-causal-impact-on-top-of-tensorflow-probability-c837ea18b126)\n",
     "* [Inferring the effect of an event using CausalImpact by Kay Broderson](https://www.youtube.com/watch?v=GTgZfCltMm8)\n",
     "* [tfcausalimpact Getting Started notebook](https://github.com/WillianFuks/tfcausalimpact/blob/master/notebooks/getting_started.ipynb)\n",
