--- a/notebooks/numpyro.ipynb
+++ b/notebooks/numpyro.ipynb
@@ -170,7 +170,8 @@
     "# jax needs a rng key\n",
     "rng_key = random.PRNGKey(seed = 42)\n",
     "# running with the observations\n",
-    "mcmc.run(rng_key, salesPriceArray = salesPriceData, sqFootageArray = sqFootageData) \n",
+    "mcmc.run(rng_key, salesPriceArray=salesPriceData, \n",
+    "         sqFootageArray=sqFootageData) \n",
     "\n",
     "## get representative sample of posterior\n",
     "posterior_samples = mcmc.get_samples()"
