--- a/notebooks/tfcausalimpact.ipynb
+++ b/notebooks/tfcausalimpact.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# `tfcausalimpact`\n",
     "\n",
-    "After looking at `causalpy`, let's see how `tfcausalimpact` compares. What I like about this is that it isn't that finnicky about the index type and this implementation uses a Bayesian Structural Time Series model which I appreciate.\n",
+    "After looking at `causalpy`, let's see how `tfcausalimpact` compares. What I like about this is that it isn't that finnicky about the index type and this implementation uses a Bayesian Structural Time Series model which I can wrap my head around.\n",
     "\n",
     "A BSTS model takes on a specific form of our happy State Space model:\n",
     "\n",
@@ -40,7 +40,7 @@
    "source": [
     "## Brexit Example\n",
     "\n",
-    "Note: First column in the dataframe MUST be the `y` variable"
+    "Note: `tfcausalimpact` assumes the `y` variable is the first column in the dataframe and all subsequent columns are covariates."
    ]
   },
   {
