added more details on the LAX scan function and filled out some docs

--- a/notebooks/0-numpyro_simplest.ipynb
+++ b/notebooks/0-numpyro_simplest.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "array([1.22556924e-01, 3.54307747e+02])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 2888.10it/s, 7 steps of size 7.38e-01. acc. prob=0.93]\n"
+      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 3107.62it/s, 7 steps of size 7.38e-01. acc. prob=0.93]\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,10 +254,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x28c7b8f10>"
+       "<graphviz.graphs.Digraph at 0x2afa07970>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "<Axes: title={'center': 'beta'}>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "<Axes: title={'center': 'beta'}>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "sigma    1167.0    NaN  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "Array(572.3217, dtype=float32)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,12 +641,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Posterior Predictive"
+    "# Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Posterior Predictive\n",
+    "\n",
+    "The `Predictive` utility runs the model by substituting the latent parameters with samples from the posterior to generate predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,6 +663,53 @@
     "# forecast_marginal = predictive(random.PRNGKey(1), salesPriceArray = salesPriceData, \n",
     "#          sqFootageArray = sqFootageData, \n",
     "#          numObs = len(salesPriceData))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prior Predictive\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prior_predictive = Predictive(salesPriceModel, num_samples=100)\n",
+    "prior_predictions = prior_predictive(rng_key, salesPriceData, sqFootageData)['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_prior_pred = jnp.mean(prior_predictions, axis=0)\n",
+    "hpdi_prior_pred = numpyro.diagnostics.hpdi(prior_predictions, 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['beta', 'mu', 'sigma', 'y'])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior_predictive(rng_key, salesPriceData, sqFootageData).keys()"
    ]
   },
   {
