--- a/notebooks/linreg_statespace.ipynb
+++ b/notebooks/linreg_statespace.ipynb
@@ -881,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that we got very close with $H$ and $Q$ and a fair estiamte of the underlying coefficients."
+    "We see that we got very close with $H$ and $Q$ and a fair estimate of the underlying coefficients."
    ]
   },
   {
