--- a/notebooks/0.1-numpyro_scan.ipynb
+++ b/notebooks/0.1-numpyro_scan.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Array([ 1,  3,  6, 11, 18, 29, 42, 59], dtype=int32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "Array([ 1,  3,  6, 11, 18, 29, 42, 59], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
     "    \"\"\"\n",
     "    Parameters\n",
     "    ----------\n",
-    "    res\n",
+    "    cumsum\n",
     "        The result from the previous loop, aka the 'carried over' result\n",
     "    el\n",
     "        The current element in the sequence in `xs`\n",
