--- a/notebooks/causal_impact/bayesian causal modeling with pymc.ipynb
+++ b/notebooks/causal_impact/bayesian causal modeling with pymc.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bayesian Causal Modeling \n",
+    "# Bayesian Causal Modeling  with PyMC\n",
     "\n",
     "* [Causal analysis with PyMC: Answering \"What If?\" with the new do operator](https://www.pymc-labs.com/blog-posts/causal-analysis-with-pymc-answering-what-if-with-the-new-do-operator/)\n",
     "\n",
