added GBB and finished WMT analysis

--- a/notebooks/causal_impact/simulate.ipynb
+++ b/notebooks/causal_impact/simulate.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [ ] TODO: Found this via gist - need to add attribution here.\n",
+    "\n",
+    "This is a cool function to simulate data and causal impacts, and output a DAG. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
