--- a/notebooks/numpyro/0-numpyro_simplest.ipynb
+++ b/notebooks/numpyro/0-numpyro_simplest.ipynb
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 2903.59it/s, 7 steps of size 7.38e-01. acc. prob=0.93]\n"
+      "sample: 100%|██████████| 4000/4000 [00:01<00:00, 3066.69it/s, 7 steps of size 7.38e-01. acc. prob=0.93]\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x107f4dc00>"
+       "<graphviz.graphs.Digraph at 0x107b3d930>"
       ]
      },
      "execution_count": 5,
@@ -267,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([547.7891 , 456.1803 , 476.95203, 392.00073, 394.39752, 437.2726 ,\n",
-       "       459.9085 , 390.93555, 479.61508, 456.1803 ], dtype=float32)"
+       "Array([414.2696 , 344.98975, 360.69855, 296.45352, 298.26608, 330.6907 ,\n",
+       "       347.8093 , 295.64792, 362.7125 , 344.98975], dtype=float32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "<Axes: title={'center': 'beta'}>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "<Axes: title={'center': 'beta'}>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "sigma    1167.0    NaN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Array(572.3217, dtype=float32)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
