--- a/notebooks/pricing_example2.ipynb
+++ b/notebooks/pricing_example2.ipynb
@@ -10,7 +10,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Recall:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "Q &= dP^{-c} \\\\\n",
+    "\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
