--- a/notebooks/ortools.ipynb
+++ b/notebooks/ortools.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Programming with OR Tools"
+    "# Linear Programming with the `ortools` Library\n",
+    "\n"
    ]
   },
   {
@@ -12,26 +13,31 @@
    "metadata": {},
    "source": [
     "1. Import linear solver wrapper\n",
-    "2. Declare the LP solver (i.e. `MPsolver`)\n",
-    "3. "
+    "2. Declare the LP solver (i.e. `MPsolver`, `GLOP`)\n",
+    "3. Create Variables (i.e. `solver.NumVar(lb, ub, name)`)\n",
+    "4. Add Constraints `solver.Add`\n",
+    "5. Define Objective `solver.Maximize()`\n",
+    "6. Invoke the solver `solver.Solve()`\n",
+    "7. Display the solution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Problem: \n",
+    "### Example Problem\n",
     "\n",
     "Maximize `3x + 4y` subject to the following constraints:\n",
     "\n",
-    "1. `x + 2y` <= 14\n",
-    "2. `3x -y` >= 0\n",
-    "3. `x - y` <= 2"
+    "1. `x + 2y <= 14`\n",
+    "2. `3x -y >= 0`\n",
+    "3. `x - y <= 2`\n",
+    "4. `x,y >= 0`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,13 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5. Define objective\n",
     "\n",
     "# Objective function: 3x + 4y.\n",
+    "# This also can accept some arbritrary function\n",
     "solver.Maximize(3 * x + 4 * y)"
    ]
   },
@@ -135,7 +142,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example"
+    "## Example\n",
+    "\n",
+    "Here's is the example in one cell:"
    ]
   },
   {
@@ -210,6 +219,155 @@
     "\n",
     "\n",
     "LinearProgrammingExample()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rosenbrock function example with `scipy.optimize`\n",
+    "\n",
+    "Compare and contrast the syntax for `ortools` with `scipy.optimize`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.000000\n",
+      "         Iterations: 339\n",
+      "         Function evaluations: 571\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "def rosen(x):\n",
+    "    \"\"\"The Rosenbrock function\"\"\"\n",
+    "    return sum(100.0*(x[1:]-x[:-1]**2.0)**2.0 + (1-x[:-1])**2.0)\n",
+    "\n",
+    "x0 = np.array([1.3, 0.7, 0.8, 1.9, 1.2])\n",
+    "res = minimize(rosen, x0, method='nelder-mead',\n",
+    "               options={'xatol': 1e-8, 'disp': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The problem is infeasible. (HiGHS Status 8: model_status is Infeasible; primal_status is At lower/fixed bound)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.optimize import linprog\n",
+    "c = np.array([-29.0, -45.0, 0.0, 0.0])\n",
+    "A_ub = np.array([[1.0, -1.0, -3.0, 0.0],\n",
+    "                [-2.0, 3.0, 7.0, -3.0]])\n",
+    "b_ub = np.array([5.0, -10.0])\n",
+    "A_eq = np.array([[2.0, 8.0, 1.0, 0.0],\n",
+    "                [4.0, 4.0, 0.0, 1.0]])\n",
+    "b_eq = np.array([60.0, 60.0])\n",
+    "x0_bounds = (0, None)\n",
+    "x1_bounds = (0, 5.0)\n",
+    "x2_bounds = (-np.inf, 0.5)  # +/- np.inf can be used instead of None\n",
+    "x3_bounds = (-3.0, None)\n",
+    "bounds = [x0_bounds, x1_bounds, x2_bounds, x3_bounds]\n",
+    "result = linprog(c, A_ub=A_ub, b_ub=b_ub, A_eq=A_eq, b_eq=b_eq, bounds=bounds)\n",
+    "print(result.message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully. (HiGHS Status 7: Optimal)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adjust x1_bounds\n",
+    "x1_bounds = (0, 6)\n",
+    "bounds = [x0_bounds, x1_bounds, x2_bounds, x3_bounds]\n",
+    "result = linprog(c, A_ub=A_ub, b_ub=b_ub, A_eq=A_eq, b_eq=b_eq, bounds=bounds)\n",
+    "print(result.message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-505.974358974359"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Optimal Value\n",
+    "result.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.41025641,  5.17948718, -0.25641026,  1.64102564])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Optimal Solution\n",
+    "result.x"
    ]
   },
   {
