added a summary of concepts to the xarray notebook

--- a/notebooks/0.3-xarray-example.ipynb
+++ b/notebooks/0.3-xarray-example.ipynb
@@ -8,7 +8,14 @@
     "\n",
     "Notes from [Multi-Dimensional Arrays for Decision Analysis, Persuasive Python](https://www.persuasivepython.com/4-multidimarrays)\n",
     "\n",
-    "Here we'll experiment with the `xarray` package as a method of storing multiple simulation runs, as a more flexible alternative to dataframes and more user-friendly than nested dictionaries"
+    "Here we'll experiment with the `xarray` package as a method of storing multiple simulation runs, as a more flexible alternative to dataframes and more user-friendly than nested dictionaries\n",
+    "\n",
+    "Concepts:\n",
+    "\n",
+    "* `DataArray`s\n",
+    "* Naming dimensions with `dims`\n",
+    "* Coordinates index an array and are specified with `coords`\n",
+    "* A `DataSet` can be created with multiple `DataArray`s"
    ]
   },
   {
