--- a/notebooks/causal_impact/doubleml.ipynb
+++ b/notebooks/causal_impact/doubleml.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `doubleml` with simulated data\n",
+    "\n",
+    "First we'll reuse that code to generate a simulated causal dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1196,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
