added ortools example

--- a/notebooks/ortools.ipynb
+++ b/notebooks/ortools.ipynb
@@ -101,7 +101,13 @@
     "\n",
     "# Objective function: 3x + 4y.\n",
     "# This also can accept some arbritrary function\n",
-    "solver.Maximize(3 * x + 4 * y)"
+    "solver.Maximize(3 * x + 4 * y)\n",
+    "\n",
+    "# Alternative:\n",
+    "# objective = solver.Objective()\n",
+    "# objective.SetCoefficient(x, 3)\n",
+    "# objective.SetCoefficient(y, 1)\n",
+    "# objective.SetMaximization()"
    ]
   },
   {
